--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                         <div class="slide-content-box">
                             <!-- <h3>SGRT</h3> -->
                             <h1>Testing Facilities</h1>
-                            <p>Industry Press has consistently embraced innovation to<br> provide a superior level of
-                                excellence.</p>
+                            <!-- <p>Industry Press has consistently embraced innovation to<br> provide a superior level of
+                                excellence.</p> -->
                             <div class="button">
                                 <a class="thm-btn yellow-bg" href="testing-facilities.html">Read More</a>
-                                <a class="thm-btn our-solution" href="#">Apply For Testing</a>
+                                <a class="thm-btn our-solution" href="https://www.glazingsociety.com/" target="_blank">Apply For Testing</a>
                             </div>
                         </div>
                     </div>
@@ -174,8 +174,8 @@
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
                         data-splitout="none" data-responsive_offset="on" data-start="2300">
                         <div class="slide-content-box last-slide">
-                            <p class="text-center">Industry Press has consistently embraced innovation to</p>
-                            <p class="text-center">provide a superior level of excellence.</p>
+                            <!-- <p class="text-center">Industry Press has consistently embraced innovation to</p>
+                            <p class="text-center">provide a superior level of excellence.</p> -->
                         </div>
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
@@ -205,8 +205,8 @@
                         <div class="slide-content-box">
                             <!-- <h3>SGRT</h3> -->
                             <h1>Research & Consultancy</h1>
-                            <p>Industry Press has consistently embraced innovation to<br> provide a superior level of
-                                excellence.</p>
+                            <!-- <p>Industry Press has consistently embraced innovation to<br> provide a superior level of
+                                excellence.</p> -->
                         </div>
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="394"
@@ -572,12 +572,13 @@
                     <div class="ml-3 mt-1">
                         <ul class="custom-bullet">
                             <li><a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://nptel.ac.in/courses/105106177')">Research
+                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://nptel.ac.in/courses/105106177', 'Students Research')">
+                                    Research
                                     and Internship
                                     opportunities (Exclusively for IIT Madras students
                                     only)</a></li>
                             <li><a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://nptel.ac.in/courses/105106178')">NOC:Glass
+                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://nptel.ac.in/courses/105106178', 'Students Research')">NOC:Glass
                                     Processing
                                     Technology,
                                     IIT Madras</a></li>
@@ -589,7 +590,7 @@
                     <div class="ml-3 mt-1">
                         <p>To visit SGRT (Structural Glass Research and Testing) Facility or to attend Lab class <a
                                 class="pointer"
-                                onclick="openModal([true,true,true,true,true,false,false,false,false,false], null)">Click
+                                onclick="openModal([true,true,true,true,true,false,false,false,false,false], null, 'SGRT Lab class / visit')">Click
                                 Here</a></p>
                     </div>
                 </div>
@@ -628,7 +629,7 @@
                             </li>
                         </ul>
                         <p class="mt-1">To download the above mentioned standards - <a class="pointer"
-                                onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://standardsbis.bsbedge.com')">Click
+                                onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://standardsbis.bsbedge.com', 'Indian Codes and Standards for Glass and Glazing')">Click
                                 Here</a></p>
                     </div>
                     <p class="mt-1">Bureau of Energy Efficiency</p>
@@ -637,13 +638,13 @@
                             <li>
                                 Energy Conservation Building Code 2017 <br>
                                 To download the above mentioned standards - <a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://beeindia.gov.in/sites/default/files/BEE_ECBC%202017.pdf')">Click
+                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://beeindia.gov.in/sites/default/files/BEE_ECBC%202017.pdf', 'Indian Codes and Standards for Glass and Glazing')">Click
                                     Here</a>
                             </li>
                             <li>
                                 Eco Niwas Samhita 2018 <br>
                                 To download the above mentioned standards - <a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://www.beeindia.gov.in/sites/default/files/ECBC_BOOK_Web.pdf')">Click
+                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://www.beeindia.gov.in/sites/default/files/ECBC_BOOK_Web.pdf', 'Indian Codes and Standards for Glass and Glazing')">Click
                                     Here</a>
                             </li>
                         </ul>
@@ -654,7 +655,7 @@
                     <div class="ml-3 mt-1">
                         <p>To attend the upcoming workshops and training seminars related to Glass and Glazing -
                             <a class="pointer"
-                                onclick="openModal([true,true,true,true,true,false,false,true,false,false], null)">Click
+                                onclick="openModal([true,true,true,true,true,false,false,true,false,false], null, 'Workshops / Training Seminars')">Click
                                 Here</a>
                         </p>
                     </div>
@@ -686,7 +687,7 @@
                                 <p>Research and Internship
                                     opportunities (Exclusively for IIT Madras students
                                     only) <a class="pointer"
-                                        onclick="openModal([true,true,true,true,true,false,true,true,false,false], null)">Click
+                                        onclick="openModal([true,true,true,true,true,false,true,true,false,false], null, 'Students Research')">Click
                                         Here</a></p>
                             </li>
                             <li>Existing Research</li>
@@ -719,7 +720,7 @@
                         </div>
                     </div>
                     <p class="mt-1">Industries interested to be a part of IIT M research <a class="pointer"
-                            onclick="openModal([true,true,true,true,true,false,false,false,false,true], null)">Click
+                            onclick="openModal([true,true,true,true,true,false,false,false,false,true], null, 'Industry Research')">Click
                             Here</a></p>
                 </div>
             </div>
@@ -909,7 +910,7 @@
             <div>
                 <p class="text-justify">&nbsp;&nbsp;Consultancy for Buildings, Glass structures etc will be done for
                     industries, builders and architects. <a class="pointer"
-                        onclick="openModal([true,true,true,true,true,false,false,false,true,false], null)">Click
+                        onclick="openModal([true,true,true,true,true,false,false,false,true,false], null, 'Structural Consultancy')">Click
                         Here</a></p>
             </div>
         </div>
@@ -1438,6 +1439,7 @@
         let formValidate = false;
         let modalInputFieldValue;
         let urlValue;
+        let category;
         let requestData = {};
 
         function getBaseUrl() {
@@ -1461,6 +1463,7 @@
 
         function details_submit() {
             document.getElementById("spinner").style.display = 'block';
+            requestData.category = category; 
             $.ajax({
                 type: "POST",
                 url: 'https://sgrt-iitm.onrender.com/api/details-query',
@@ -1498,6 +1501,8 @@
 
         $(document).on('click', '#btnSend', function () {
             event.preventDefault();
+
+
 
             if (modalInputFieldValue[0]) {
                 //validate name
@@ -1620,9 +1625,10 @@
             document.getElementById('text-message').style.display = "none";
         });
 
-        function openModal(modalData, url) {
+        function openModal(modalData, url, categoryName) {
             modalInputFieldValue = modalData;
             urlValue = url;
+            category = categoryName;
             for (let i = 0; i < modalInputFieldValue.length; i++) {
                 if (modalInputFieldValue[i] === false) {
                     document.getElementById("id-" + (i + 1)).style.display = 'none';
