--- a/research-consultancy.html
+++ b/research-consultancy.html
@@ -131,6 +131,16 @@
                                     <div id="float-glass" class="text-holder">
                                         <div class="sec-title-two">
                                             <h2>Research & consultancy on Structural Glass at IIT-M</h2>
+                                            <div>
+                                                <p class="text-justify mt-2" style="color: black;">
+                                                    SGRT’s goal is to encourage and build research and study on Glass,
+                                                    Profiles, Façade, and Fenestration and their associated materials and also focus on the quality and
+                                                    performance of materials, their application, and functional aspects in buildings. Building a code of
+                                                    practices for the use of structural glazing in the country through continuous research and interaction
+                                                    with the Bureau of Indian Standards. Sustainable energy performance in facades and systems In India
+                                                    through structural integrity and durability.
+                                                </p>
+                                            </div>
                                         </div>
                                         <div class="sec-title-three">
                                             <h3>Research:</h3>
@@ -234,7 +244,7 @@
                                                 <div class="accord-btn accordion-header">
                                                     <h4>Research on lateral load behavior of Glass facade systems</h4>
                                                 </div>
-                                                <div class="accord-content" >
+                                                <div class="accord-content">
                                                     <p><b>Project Done by:</b> Mr P Midhun Babu, Dual degree, M.Tech in
                                                         Structural Engineering, 2010 batch.</p>
                                                     <br>
@@ -281,7 +291,7 @@
                                             </div>
                                             <!--End single accordion box-->
                                             <!--Start single accordion box-->
-                                            <div class="accordion"  id="3">
+                                            <div class="accordion" id="3">
                                                 <div class="accord-btn accordion-header">
                                                     <h4>Fragmentation result interpretation using image processing</h4>
                                                 </div>
