--- a/training-industrial-visit-awareness.html
+++ b/training-industrial-visit-awareness.html
@@ -131,6 +131,15 @@
                                     <div id="float-glass" class="text-holder">
                                         <div class="sec-title-two">
                                             <h2>TRAINING, INDUSTRIAL VISIT AND AWARENESS</h2>
+                                            <div>
+                                                <p class="text-justify mt-2" style="color: black;">
+                                                    Structural Glass Research and Testing Facility (SGRT) at IIT Madras
+                                                    aims to provide vast knowledge and awareness on Architectural Glass, Glazing, and associated
+                                                    materials for students, professionals, and industry. Encouraging more students to have short and
+                                                    long-term internship programs. Organizing various site visits, plant visits, and mini projects on
+                                                    glass buildings for the tong minds to understand the modern Indian glazed building.
+                                                </p>
+                                            </div>
                                         </div>
                                         <div class="timeline_wrapper">
                                             <ul class="bxslider">
