--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                                 excellence.</p> -->
                             <div class="button">
                                 <a class="thm-btn yellow-bg" href="testing-facilities.html">Read More</a>
-                                <a class="thm-btn our-solution" href="https://www.glazingsociety.com/" target="_blank">Apply For Testing</a>
+                                <a class="thm-btn our-solution" href="https://www.glazingsociety.com/"
+                                    target="_blank">Apply For Testing</a>
                             </div>
                         </div>
                     </div>
@@ -179,8 +180,8 @@
                         </div>
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
-                        data-voffset="90" data-transform_idle="o:1;"
-                        data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+                        data-voffset="65" data-transform_idle="o:1;"
+                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
                         data-splitout="none" data-responsive_offset="on" data-start="3000">
                         <div class="slide-content-box last-slide">
@@ -209,9 +210,9 @@
                                 excellence.</p> -->
                         </div>
                     </div>
-                    <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="394"
+                    <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="250"
                         data-transform_idle="o:1;"
-                        data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+                        data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
                         data-splitout="none" data-responsive_offset="on" data-start="2300">
                         <div class="slide-content-box">
@@ -693,13 +694,17 @@
                             <li>Existing Research</li>
                             <div class="ml-3 mt-1">
                                 <ul class="custom-bullet">
-                                    <li><a href="research-consultancy.html#1">Research study on Structural glass as a building
+                                    <li><a href="research-consultancy.html#1">Research study on Structural glass as a
+                                            building
                                             material in Indian high-rise buildings</a></li>
-                                    <li><a href="research-consultancy.html#2">Research on lateral load behavior of Glass Facade</a>
+                                    <li><a href="research-consultancy.html#2">Research on lateral load behavior of Glass
+                                            Facade</a>
                                     </li>
-                                    <li><a href="research-consultancy.html#3">Research on Fragmentation result interpretation using
+                                    <li><a href="research-consultancy.html#3">Research on Fragmentation result
+                                            interpretation using
                                             image</a></li>
-                                    <li><a href="research-consultancy.html#4">Response behavior of glazed façade subjected to
+                                    <li><a href="research-consultancy.html#4">Response behavior of glazed façade
+                                            subjected to
                                             wind</a></li>
                                 </ul>
                             </div>
@@ -1463,7 +1468,7 @@
 
         function details_submit() {
             document.getElementById("spinner").style.display = 'block';
-            requestData.category = category; 
+            requestData.category = category;
             $.ajax({
                 type: "POST",
                 url: 'https://sgrt-iitm.onrender.com/api/details-query',
