--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                         <div class="slide-content-box">
                             <!-- <h3>SGRT</h3> -->
                             <h1>Testing Facilities</h1>
-                            <!-- <p>Industry Press has consistently embraced innovation to<br> provide a superior level of
-                                excellence.</p> -->
+                            <p>SGRT facility has provided valuable inputs for the formulaƟon of
+                                new standards for processed glass by the Bureau of Indian Standards.</p>
                             <div class="button">
                                 <a class="thm-btn yellow-bg" href="testing-facilities.html">Read More</a>
                                 <a class="thm-btn our-solution" href="https://www.glazingsociety.com/"
@@ -160,7 +160,7 @@
                         data-start="500">
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
-                        data-voffset="-80" data-transform_idle="o:1;"
+                        data-voffset="-130" data-transform_idle="o:1;"
                         data-transform_in="x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
                         data-mask_in="x:[-100%];y:0;s:inherit;e:inherit;" data-splitin="none" data-splitout="none"
@@ -170,13 +170,16 @@
                         </div>
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
-                        data-voffset="5" data-transform_idle="o:1;"
+                        data-voffset="-50" data-transform_idle="o:1;"
                         data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
                         data-splitout="none" data-responsive_offset="on" data-start="2300">
                         <div class="slide-content-box last-slide">
-                            <!-- <p class="text-center">Industry Press has consistently embraced innovation to</p>
-                            <p class="text-center">provide a superior level of excellence.</p> -->
+                            <div class="slide-content-box last-slide">
+                                <p class="text-center" style="color: #0e112c; font-weight: 600">SGRT at IIT Madras aims to provide vast
+                                    knowledge and awareness on Architectural Glass, <br> Glazing, and associated 
+                                    materials for students, professionals, and industry.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="0" data-y="center"
@@ -206,11 +209,13 @@
                         <div class="slide-content-box">
                             <!-- <h3>SGRT</h3> -->
                             <h1>Research & Consultancy</h1>
-                            <!-- <p>Industry Press has consistently embraced innovation to<br> provide a superior level of
-                                excellence.</p> -->
+                            <p style="width: 50%;">SGRT’s goal is to encourage and build
+                                research and study on Glass, Profiles, Facade, and Fenestration and their
+                                associated materials <br> and also focus on the quality and performance of
+                                materials, their applicaƟon, and funcƟonal aspects in buildings.</p>
                         </div>
                     </div>
-                    <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="250"
+                    <div class="tp-caption tp-resizeme" data-x="left" data-hoffset="0" data-y="top" data-voffset="280"
                         data-transform_idle="o:1;"
                         data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:7000;e:Power3.easeOut;"
                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-splitin="none"
@@ -568,30 +573,30 @@
                     and industry.</p>
             </div>
             <div class="ml-3">
-                <div>
+                <!-- <div>
                     <b class="bold-fw">Students Research</b>
                     <div class="ml-3 mt-1">
                         <ul class="custom-bullet">
                             <li><a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://nptel.ac.in/courses/105106177', 'Students Research')">
+                                    onclick="openModal([true,true,true,true,true,false,true,false,false,false,false,false], 'https://nptel.ac.in/courses/105106177', 'Students Research')">
                                     Research
                                     and Internship
                                     opportunities (Exclusively for IIT Madras students
                                     only)</a></li>
                             <li><a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://nptel.ac.in/courses/105106178', 'Students Research')">NOC:Glass
+                                    onclick="openModal([true,true,true,true,true,false,true,false,false,false, false,false], 'https://nptel.ac.in/courses/105106178', 'Students Research')">NOC:Glass
                                     Processing
                                     Technology,
                                     IIT Madras</a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
                 <div class="mt-1">
                     <b class="bold-fw">SGRT Lab class / visit</b>
                     <div class="ml-3 mt-1">
                         <p>To visit SGRT (Structural Glass Research and Testing) Facility or to attend Lab class <a
                                 class="pointer"
-                                onclick="openModal([true,true,true,true,true,false,false,false,false,false], null, 'SGRT Lab class / visit')">Click
+                                onclick="openModal([true,true,true,true,true,false,true,false,false,false], null, 'SGRT Lab class / visit')">Click
                                 Here</a></p>
                     </div>
                 </div>
@@ -630,7 +635,7 @@
                             </li>
                         </ul>
                         <p class="mt-1">To download the above mentioned standards - <a class="pointer"
-                                onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://standardsbis.bsbedge.com', 'Indian Codes and Standards for Glass and Glazing')">Click
+                                onclick="openModal([true,true,true,true,true,false,true,false,false,false, false,false], 'https://standardsbis.bsbedge.com', 'Indian Codes and Standards for Glass and Glazing')">Click
                                 Here</a></p>
                     </div>
                     <p class="mt-1">Bureau of Energy Efficiency</p>
@@ -639,13 +644,13 @@
                             <li>
                                 Energy Conservation Building Code 2017 <br>
                                 To download the above mentioned standards - <a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://beeindia.gov.in/sites/default/files/BEE_ECBC%202017.pdf', 'Indian Codes and Standards for Glass and Glazing')">Click
+                                    onclick="openModal([true,true,true,true,true,false,true,false,false,false, false,false], 'https://beeindia.gov.in/sites/default/files/BEE_ECBC%202017.pdf', 'Energy Conservation Building Code 2017')">Click
                                     Here</a>
                             </li>
                             <li>
                                 Eco Niwas Samhita 2018 <br>
                                 To download the above mentioned standards - <a class="pointer"
-                                    onclick="openModal([true,true,true,true,true,false,false,false,false,false], 'https://www.beeindia.gov.in/sites/default/files/ECBC_BOOK_Web.pdf', 'Indian Codes and Standards for Glass and Glazing')">Click
+                                    onclick="openModal([true,true,true,true,true,false,true,false,false,false, false,false], 'https://www.beeindia.gov.in/sites/default/files/ECBC_BOOK_Web.pdf', 'Eco Niwas Samhita 2018')">Click
                                     Here</a>
                             </li>
                         </ul>
@@ -656,7 +661,7 @@
                     <div class="ml-3 mt-1">
                         <p>To attend the upcoming workshops and training seminars related to Glass and Glazing -
                             <a class="pointer"
-                                onclick="openModal([true,true,true,true,true,false,false,true,false,false], null, 'Workshops / Training Seminars')">Click
+                                onclick="openModal([true,true,true,true,true,false,true,true,false,false, false,false], null, 'Workshops / Training Seminars')">Click
                                 Here</a>
                         </p>
                     </div>
@@ -684,13 +689,17 @@
                     <b class="bold-fw">Students Research</b>
                     <div class="ml-3 mt-1">
                         <ul class="custom-bullet">
-                            <li>
-                                <p>Research and Internship
-                                    opportunities (Exclusively for IIT Madras students
-                                    only) <a class="pointer"
-                                        onclick="openModal([true,true,true,true,true,false,true,true,false,false], null, 'Students Research')">Click
-                                        Here</a></p>
-                            </li>
+                            <li><a class="pointer"
+                                onclick="openModal([true,true,true,true,true,false,true,true,false,false, false,false], 'https://nptel.ac.in/courses/105106177', 'Research and Internship opportunities')">
+                                Research
+                                and Internship
+                                opportunities (Exclusively for IIT Madras students
+                                only)</a></li>
+                            <li><a class="pointer"
+                                onclick="openModal([true,true,true,true,true,false,true,false,false,false, false,false], 'https://nptel.ac.in/courses/105106178', 'NOC:Glass Processing Technology, IIT Madras')">NOC:Glass
+                                Processing
+                                Technology,
+                                IIT Madras</a></li>
                             <li>Existing Research</li>
                             <div class="ml-3 mt-1">
                                 <ul class="custom-bullet">
@@ -725,7 +734,7 @@
                         </div>
                     </div>
                     <p class="mt-1">Industries interested to be a part of IIT M research <a class="pointer"
-                            onclick="openModal([true,true,true,true,true,false,false,false,false,true], null, 'Industry Research')">Click
+                            onclick="openModal([true,true,true,false,false,false,true,false,false,true,true,true], null, 'Industry Research')">Click
                             Here</a></p>
                 </div>
             </div>
@@ -915,7 +924,7 @@
             <div>
                 <p class="text-justify">&nbsp;&nbsp;Consultancy for Buildings, Glass structures etc will be done for
                     industries, builders and architects. <a class="pointer"
-                        onclick="openModal([true,true,true,true,true,false,false,false,true,false], null, 'Structural Consultancy')">Click
+                        onclick="openModal([true,true,true,true,true,false,true,false,true,false], null, 'Structural Consultancy')">Click
                         Here</a></p>
             </div>
         </div>
@@ -1122,6 +1131,22 @@
                                 <div class="input-group">
                                     <input class="form-control" placeholder="Department" name="department" type="text"
                                         id="department" />
+                                </div>
+                                <p class="help-block hidden">Please enter a name 3 characters or more.</p>
+                            </div>
+                            <div class="form-group" id="id-11">
+                                <label class="control-label" for="firm">Firm</label>
+                                <div class="input-group">
+                                    <input class="form-control" placeholder="Firm" name="firm" type="text"
+                                        id="firm" />
+                                </div>
+                                <p class="help-block hidden">Please enter a name 3 characters or more.</p>
+                            </div>
+                            <div class="form-group" id="id-12">
+                                <label class="control-label" for="designation">Designation</label>
+                                <div class="input-group">
+                                    <input class="form-control" placeholder="Designation" name="designation" type="text"
+                                        id="designation" />
                                 </div>
                                 <p class="help-block hidden">Please enter a name 3 characters or more.</p>
                             </div>
@@ -1618,6 +1643,26 @@
                 }
                 showErrorSuccess($('#researchTopic'));
                 requestData.researchTopic = $('#researchTopic').val();
+            }
+
+            if (modalInputFieldValue[10]) {
+                //validate Department
+                var department = $('#firm').val();
+                if (department.length < 3) {
+                    return showErrorSuccess($('#firm'), false);
+                }
+                showErrorSuccess($('#firm'));
+                requestData.department = $('#firm').val();
+            }
+
+            if (modalInputFieldValue[11]) {
+                //validate Department
+                var department = $('#designation').val();
+                if (department.length < 3) {
+                    return showErrorSuccess($('#designation'), false);
+                }
+                showErrorSuccess($('#designation'));
+                requestData.department = $('#designation').val();
             }
 
             formValidate = true;
